# patrick-im

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
backend/_legacy/rust/: Cargo.toml
backend/_legacy/rust/server/: .env.local.example  build.rs
backend/server/: .env.example  .env.local.example  Cargo.toml  Dockerfile  go.mod  go.sum
backend/server/cmd/patrick-im-server/: main.go
backend/server/internal/chat/: hub.go  hub_test.go  relay_uploads.go  store.go  store_test.go  store_v2.go
backend/server/internal/config/: config.go
backend/server/internal/httpapi/: api.go  api_test.go  ws.go
backend/server/internal/messages/: store.go  store_test.go  threading.go  threading_test.go
backend/server/internal/protocol/: types.go  types_test.go
backend/server/internal/realtime/: hub.go  hub_test.go
backend/server/internal/relay/: service.go  service_test.go
backend/server/internal/repository/: models.go  sqlite.go  sqlite_test.go
backend/server/internal/session/: session.go  session_test.go
backend/server/internal/staticweb/: static.go
backend/server/internal/util/: sanitize.go  sanitize_test.go  time.go
backend/server/migrations/: 0001_init_message_store.sql  0003_relay_upload_requests.sql  0005_expand_message_text.sql
backend/server/src/: config.rs  http.rs  lib.rs  main.rs  protocol.rs  session.rs  signing.rs  state.rs
backend/server/src/routes/: files.rs  health.rs  mod.rs  session.rs  threads.rs  web.rs  ws.rs
backend/server/src/routes/ws/: commands.rs  handler.rs  session.rs
backend/server/src/services/: relay_store.rs  room_hub.rs
backend/server/src/store/: message_store.rs
backend/server/src/store/message_store/: mod.rs  threading.rs
docs/: im-v2-architecture.md  im-v2-feature-audit.md  rewrite-design.md  rust-rewrite-architecture.md
frontend/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/web/shared/: protocol.ts
frontend/web/src/: App.tsx  app-model.test.ts  app-model.ts  index.css  webrtc.test.ts  webrtc.ts
frontend/web/src/app/: chat-formatters.test.ts  chat-formatters.ts  chat-sections.tsx  dialogs.tsx  relay-utils.test.ts  relay-utils.ts  room-picker.tsx  room-state.test.ts  room-state.ts  send-actions.test.ts  send-actions.ts  server-events.test.ts  server-events.ts  thread-actions.test.ts  thread-actions.ts  transfer-state.test.ts  transfer-state.ts  types.ts  use-relay-uploads.test.tsx  use-relay-uploads.ts  use-room-connection.test.tsx  use-room-connection.ts
frontend/web/src/lib/: clipboard.ts  file-system.ts  peer-mesh.test.ts  peer-mesh.ts  utils.test.ts  (+1 more)
ops/: docker-compose.server.yml  docker-compose.yml  install.sh  sync-remotes.sh
ops/openresty/: patrick-im.conf.example
(+20 files in other folders)
