[package]
name = "patrick-im-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = { version = "0.5", features = ["util"] }
time = { version = "0.3", features = ["macros"] }
aws-sdk-s3 = "1"
bytes = "1"
base64 = "0.22"
futures-util = "0.3"
hmac = "0.12"
include_dir = "0.7"
mime_guess = "2"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1", features = ["v4", "serde"] }
